<resources>
    <string name="app_name">XKCD Viewer</string>
    <string name="action_settings">Settings</string>

    <string name="first_button">« first</string>
    <string name="prev_button">‹ prev</string>
    <string name="list_button">#1</string>
    <string name="next_button">next ›</string>
    <string name="last_button">last »</string>

    <string name="title_activity_comics_list_acivity">Comics list</string>

    <string name="title_activity_comics_list">ComicsListActivity</string>
    <string name="action_copy">Copy link</string>
    <string name="action_share">Share</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="useStorage">Save comics</string>
    <string name="useStorageDescription">Save comics to SD card and info about them. (Will save to sdcard/xkcd)</string>
</resources>
